syntax = "proto3";

package maxnumber;

service MaxNumber {
    rpc FindMaxNumber(stream FindMaxNumberRequest) returns (stream FindMaxNumberResponse) {}
}

message FindMaxNumberRequest {
    // int32 number = 1;
    PublicKey public_key = 2;
    PrivateKey private_key = 3;
    bytes cipher_text = 4;
    bytes signature = 5;
}

message FindMaxNumberResponse {
    int32 max_number = 1;
}
// The client will send signature, the data(number), his public key and his private key
// The server will verify the signature and decode the data
// The server saves the current high data obviously
// proto file should have big.Int to create message for pivate key and public key

message PublicKey {
    bytes public_key = 1;
}

message PrivateKey {
    bytes private_key = 1;
}


// Questions

// Does the client really need his private key? Or just his public key?
// Yes

// Client side ------------>
// For signature -> Required -> Private key and message
// For cipherText -> Required -> Public key and message

// <-----------Server side 
// To decrypt -> cipherText and private key
// to verify signature -> plain text, signature, public key

// Search for private key public key rsa gRPC protocol buffer 
